fix: dropdown z-index

--- a/src/App.scss
+++ b/src/App.scss
@@ -67,3 +67,15 @@ body {
   height: 550px !important;
   overflow: none;
 }
+
+// Media queries
+
+@media screen and (max-width: 650px) {
+  .w-md-editor-toolbar {
+    height: 50px !important;
+  }
+
+  .w-md-editor-content {
+    height: calc(100% - 50px) !important;
+  }
+}
